<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/home_backgroud" >
 
    <LinearLayout
        android:id="@id/linRank"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
         android:background="@drawable/segment_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@id/textRankSale"
            style="@style/style_13_FFFFFF_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_selected_1_bg"
            android:gravity="center"
            android:text="@string/sales" />

        <TextView
            android:id="@id/textRankPrice"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_2_bg"
            android:gravity="center"
            android:text="@string/price" />

        <TextView
            android:id="@id/textRankGood"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_3_bg"
            android:gravity="center"
            android:text="@string/goodDegree" />

        <TextView
            android:id="@id/textRankTime"
            style="@style/style_13_4B4B4B_BOLD"
            android:layout_width="60.0dip"
            android:layout_height="wrap_content"
            android:background="@drawable/segment_normal_3_bg"
            android:gravity="center"
            android:text="@string/groundingTime" />
    </LinearLayout>

    <ListView
        android:id="@id/productList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomBar"
        android:layout_below="@id/linRank"
        android:cacheColorHint="#00000000"
        android:divider="@drawable/listview_item_line"
        android:listSelector="@anim/index_item_bg" />
 
</RelativeLayout>