<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/mSrollView"
      >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="5.0dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="收货人："
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/add_address_name_edit"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="手机："
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/add_address_mobile_edit"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="固定电话："
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/add_address_tel_edit"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip"
                android:phoneNumber="true"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_address_province_ly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:clickable="true"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="省份："
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/address_add_spinner_province"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip" 
                android:prompt="@string/address_select_province"
                
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_address_city_ly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:clickable="true"
            android:orientation="horizontal"  android:visibility="gone" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="城市："
                android:textColor="@color/black"
                 />

            <Spinner
                android:id="@+id/address_add_spinner_city"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip"
                 android:prompt="@string/address_select_city"
                   
                 />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_address_area_ly"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:clickable="true"
            android:orientation="horizontal" 
            android:visibility="gone"
             >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="地区："
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/address_add_spinner_area"
                 android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip" 
                android:prompt="@string/address_select_area"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="详细地址："
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/add_address_detail_edit"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="70.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="邮编："
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/add_address_zipcode_edit"
                android:layout_width="230.0dip"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5.0dip"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="15.0sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/save_address_button"
                android:layout_width="120.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:clickable="true"
                android:gravity="center"
                android:text="保存"
                android:textSize="16.0sp" />

            <Button
                android:id="@+id/cancel_address_button"
                android:layout_width="120.0dip"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:clickable="true"
                android:gravity="center"
                android:text="取消"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>